<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alexsav.popularmovies.activities.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundDetails"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_backdrop_image"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/images"
                android:scaleType="centerCrop" />

            <!-- Main Info of the Movie -->
            <android.support.v7.widget.CardView
                android:id="@+id/details_card"
                style="@style/CardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_details"
                        android:layout_width="@dimen/space_200"
                        android:layout_height="@dimen/space_250"
                        android:contentDescription="@string/images" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_10"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/movie_title_text_view"
                            style="@style/DetailsScreenInfo"
                            android:hint="@string/movie_title_hint"
                            android:maxLines="2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textSize="@dimen/title_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/label_date_text_view"
                            style="@style/DetailsScreenLabels"
                            android:text="@string/label_date" />

                        <TextView
                            android:id="@+id/date_text_view"
                            style="@style/DetailsScreenInfo"
                            android:hint="@string/movie_date_hint"
                            android:textColor="@color/colorLightGrey" />

                        <TextView
                            android:id="@+id/label_rating_text_view"
                            style="@style/DetailsScreenLabels"
                            android:text="@string/label_rating" />

                        <TextView
                            android:id="@+id/rating_text_view"
                            style="@style/DetailsScreenInfo"
                            android:drawablePadding="@dimen/space_10"
                            android:drawableStart="@drawable/rating_star_small"
                            android:hint="@string/movie_rating_hint"
                            android:textColor="@color/colorLightGrey"
                            android:textSize="@dimen/title_text_size" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/fab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|end"
                            android:layout_marginEnd="@dimen/space_15"
                            android:clickable="true"
                            app:backgroundTint="@color/colorAccent"

                            fab:srcCompat="@drawable/ic_add_favorite"
                            tools:ignore="VectorDrawableCompat" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Overview -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_2"
                android:layout_marginBottom="@dimen/space_10"
                android:layout_marginTop="@dimen/space_10"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/small_padding_5" />

            <android.support.v7.widget.CardView
                android:id="@+id/overview_card"
                style="@style/CardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_synopsis_text_view"
                        style="@style/DetailsScreenLabels"
                        android:text="@string/label_overview"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/synopsis_text_view"
                        style="@style/DetailsScreenInfo"
                        android:hint="@string/movie_overview_hint" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Reviews -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_2"
                android:layout_marginBottom="@dimen/space_10"
                android:layout_marginTop="@dimen/space_10"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/small_padding_5" />

            <android.support.v7.widget.CardView style="@style/CardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/DetailsScreenLabels"
                        android:text="@string/label_reviews"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerViewReviews"
                        style="@style/RecyclerViewStyle"
                        android:layout_margin="@dimen/space_1" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Trailers -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_2"
                android:layout_marginBottom="@dimen/space_10"
                android:layout_marginTop="@dimen/space_10"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/small_padding_5" />

            <android.support.v7.widget.CardView style="@style/CardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/DetailsScreenLabels"
                        android:text="@string/label_trailer"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerViewTrailers"
                        style="@style/RecyclerViewStyle"
                        android:layout_margin="@dimen/space_1">

                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</layout>